A more updated changelog can always be viewed here: http://bit.ly/10ZUTgC

 - 23-28
~ More fixes

MPSA - 22
+ Added EU Reader Module to the power tool

MPSA - 18-21
~ Various bugfixes and such, nothing big

MPSA - 17
~ Tweaked kinetic generator energy amounts. Configs will need to be reset for this change to take place.

MPSA - 13-16
~ Updated forge and buildscript.

MPSA - 12
+ Re-added indev GUI elements

MPSA - 11
- Removed indev GUI elements for now

MPSA - 7-10
~ Getting jenkins to work, nothing new

MPSA - 6
~ Testing new build.xml

MPSA - 5
+ Added experimental HUD elements for Auto-Feeder and Torch Placer

MPSA - 4
+ Added torch placing module
~ Cleaned up some code

MPSA - 3
+ Added textures and removed them from MPS
~ Fix for some MPS changes in 1.5.1

MPSA - 2
+ Added Magnet Module
~ Migrated more code

MPSA - 1
+ Transferred modules over from MPS
	*Auto-feeder
	*Solar Generator
	*Kinetic Generator
	*Portable Crafting Table
+ Added two new components: Solar Panel and Magnet
~ Migrated quite a lot of code from MPS