@@ -1,6 +1,9 @@
 A more updated changelog can always be viewed here: http://bit.ly/10ZUTgC
 
- - 23-28
+MPSA - 31/32
++ Added indev Omni Wrench module
+
+MPSA - 23-30
 ~ More fixes
 
 MPSA - 22
